@@ -1,4 +1,7 @@
 Version 1.1.0-CVS (?? ??? 2005)
+ - Fixed default UAC settings. User's cal_admin value is now used vs $is_admin
+ - Fixed bug 1335631: Admin-Link on bottom of page shows with access control on
+ - Changed the way cookies are encrypted. This should fix login looping problems 
  - Added ability to disable RSS link inclusion in print_header(). Useful for popups
  - Fixed bug 1275705: Typos in language files
  - Fixed bug 1278023: Carriage returns break I-cal files in v1.1.0-CVS
